--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Junwen An"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "Senior CS Student at SUSTech"
   location         : "Shenzhen, China"
   employer         :
