--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Junwen An"
   avatar           : "photo.jpg"
-  bio              : "Senior CS Student at SUSTech"
-  location         : "Shenzhen, China"
+  bio              : "PhD Student at NUS"
+  location         : "Singapore"
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "anjw2020@mail.sustech.edu.cn"
+  email            : "junwenan@u.nus.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
